Enhance performance report with comprehensive testing methodology and analysis
Co-authored-by: AbooSalh <93827342+AbooSalh@users.noreply.github.com>